# rust-raytracer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.txt
raytracer-cli/: Cargo.toml  test_scene_parsing.sh
raytracer-cli/src/: main.rs
raytracer-cli/src/output/: mod.rs  png_export.rs
raytracer-lib/: Cargo.toml
raytracer-lib/src/: antialias.rs  constants.rs  framebuffer.rs  hit_record.rs  lib.rs  prelude.rs  render.rs  scene.rs
raytracer-lib/src/camera/: camera.rs  mod.rs  orthographic.rs  perspective.rs
raytracer-lib/src/geometry/: bbox.rs  bvh.rs  cuboid.rs  instance.rs  mesh.rs  mod.rs  quad.rs  sphere.rs  triangle.rs
raytracer-lib/src/light/: ambient.rs  mod.rs  point.rs
raytracer-lib/src/material/: dielectric.rs  diffuse.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
raytracer-lib/src/math/: coordinate_system.rs  mod.rs  ray.rs  vector.rs
raytracer-lib/src/scene/: mod.rs  parse_vec3.rs
raytracer-lib/src/shader/: blinn_phong.rs  diffuse.rs  ggx_mirror.rs  hit_record.rs  hit_struct.rs  lambertian.rs  mod.rs  normal.rs  null.rs  perfect_mirror.rs
raytracer-lib/src/texture/: checkered.rs  image.rs  mod.rs  solid_color.rs
raytracer-wasm/: Cargo.toml
raytracer-wasm/.cargo/: config.toml
raytracer-wasm/src/: lib.rs
web-test/: .gitignore  index.html  index.js  package-lock.json  package.json  serve.json  webpack.config.js  worker.js
web-test/scenes/: cornell_room.json  cornell_room_quad.json  raytracing_one_weekend_final_render.json  sphere_scene.json  spheres.json  spheres_1K_new.json
web_test/: index.html  index.js  serve.py
web_test/scenes/: cornell_room.json  mirror_scene.json  spheres_1K.json
