[package]
name = "raytracer-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
approx = "0.5"
wasm-bindgen = "0.2.95"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }

[features]
default = ["f64"]
f64 = []
f32 = []

[lib]
crate-type = ["rlib", "cdylib"]  # To enable usage as a library in WASM
