[package]
name = "raytracer-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33"
approx = "0.5"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
rand = "0.8.5"
tobj = { version = "4.0.2", features = ["async"] }

[features]
default = []
f64 = []
f32 = []
coordinate_system_debug = []

[lib]
crate-type = ["rlib"]
