[package]
name = "raytracer-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
raytracer-lib = { path = "../raytracer-lib", features = ["f64"] }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
		"console",
    "Window",
    "Document",
    "WebGl2RenderingContext",
    "WebGlContextAttributes",
    "WebGlPowerPreference",
    "HtmlCanvasElement",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "Request",
    "Response",
    "RequestInit",
    "RequestMode",
]}
js-sys = "0.3"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-rayon = "1.2.2"

[lib]
crate-type = ["rlib", "cdylib"]  # To enable usage as a library in WASM

[toolchain]
channel = "nightly-2024-11-29"
components = ["rust-src"]
targets = ["wasm32-unknown-unknown"]
